--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Update .PHONY listings in makefiles.
+	* Makefile.in (.PHONY): Add all, need-blessmail, maybe-blessmail,
+	install, uninstall, mostlyclean, clean, distclean,
+	maintainer-clean, extraclean, check, tags.
+
 2012-07-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in ($(BLD)/profile.$(O)): Depend on stamp_BLD.
