--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,9 @@
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* lisp.h (SWITCH_ENUM_CAST): Remove.  All uses removed.
+	This no-op macro hasn't been needed for many years.
+	* src/regex.c (SWITCH_ENUM_CAST) [!emacs]: Likewise.
+
 	Export DIRECTORY_SEP, TYPEMASK, VALMASK to GDB.
 	* alloc.c (gdb_make_enums_visible) [USE_LSB_TAG]: Add lsb_bits.
 	* lisp.h (enum lsb_bits) [USE_LSB_TAG]: New enum, for
