--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-30  Stefan Merten  <smerten@oekonux.de>
+
+	* rst.el: Silence `checkdoc-ispell'.
+	(rst-cvs-header, rst-svn-rev, rst-svn-timestamp)
+	(rst-official-version, rst-official-cvs-rev)
+	(rst-package-emacs-version-alist): Update to upstream V1.3.1.
+	(rst-mode-map): New key binding.
+
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Update .PHONY listings in makefiles.
