Don't open files from Cocoa-parsed command line.
--eval '(whatever)' will open '(whatever)' if --eval is the last option.

* src/nsterm.m (ns_do_open_file): New variable.
(ns_term_init): Set ns_do_open_file to NO after run returns.
(openFile, openTempFile, openFileWithoutUI, openFiles): Open
files only if ns_do_open_file.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-30  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (ns_do_open_file): New variable.
+	(ns_term_init): Set ns_do_open_file to NO after run returns.
+	(openFile, openTempFile, openFileWithoutUI, openFiles): Open
+	files only if ns_do_open_file.
+
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lisp.h (SWITCH_ENUM_CAST): Remove.  All uses removed.
