--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-30  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (AH_BOTTOM): Use an include file, so that the
+	contents do not get processed by autoheader.
+
 2012-07-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Do not overwrite config.status while executing it (Bug#11214).
