Remove src/s/hpux10-20.h
* configure.ac (opsysfile): Set to empty on hpux*.

* src/conf_post.h [HPUX]: Move random, srandom here from s/hpux10-20.h.

* src/s/hpux10-20.h: Remove file, which is now empty.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-31  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (opsysfile): Set to empty on hpux*.
+
 2012-07-30  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (AH_BOTTOM): Use an include file, so that the
