Remove src/s/darwin.h
* configure.ac (opsysfile): Set to empty on darwin.

* src/conf_post.h [DARWIN_OS]: Move remaining contents of src/s/darwin.h here.

* src/s/darwin.h: Remove file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
-	* configure.ac (opsysfile): Set to empty on hpux*.
+	* configure.ac (opsysfile): Set to empty on hpux*, darwin.
 
 2012-07-30  Glenn Morris  <rgm@gnu.org>
 
