* indent.c (compute_motion): Remove unused local.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-31  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* indent.c (compute_motion): Remove unused local.
+
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
 	* conf_post.h [DARWIN_OS]: Move remaining contents of s/darwin.h here.
