Remove src/s/irix6-5.h
* configure.ac (opsysfile): Set to s/usg5-4-common.h on irix6-5.

* src/conf_post.h [IRIX6_5]: Move remaining contents of s/irix6-5.h here.

* src/s/irix6-5.h: Remove file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
-	* configure.ac (opsysfile): Set to empty on hpux*, darwin.
+	* configure.ac (opsysfile): Set to empty on hpux*, darwin;
+	and to s/usg5-4-common.h on irix6-5.
 
 2012-07-30  Glenn Morris  <rgm@gnu.org>
 
