--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -8,6 +8,8 @@
 
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
+	* s/usg5-4-common.h (wait3, WRETCODE): Let configure set them.
+
 	* conf_post.h [IRIX6_5]: Move remaining contents of s/irix6-5.h here.
 	* s/irix6-5.h: Remove file.
 
