--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
+	* configure.ac (USG5_4): Reintroduce this.
+	(opsysfile): Set to empty on irix6-5, sol2*, and unixware.
+
 	* configure.ac (wait3, WRETCODE): Move here from src/s/usg5-4-common.h.
 
 	* configure.ac (opsysfile): Set to empty on hpux*, darwin;
