--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-31  Bastien Guerry  <bzg@gnu.org>
+
+	* man.el (man): Fix comment.  (bug#12101)
+
 2012-07-31  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (switch-to-prev-buffer, switch-to-next-buffer):
