* src/conf_post.h [HPUX]: Undefine HAVE_RANDOM and HAVE_RINT. This is a belt-and-braces approach.
* configure.ac: Related comment.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
+	* conf_post.h [HPUX]: Undefine HAVE_RANDOM and HAVE_RINT.
+
 	* conf_post.h (AMPERSAND_FULL_NAME, subprocesses):
 	Move to configure.ac.
 
