--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
+	* s/README, s/template.h: Remove files.
+
 	* conf_post.h [HPUX]: Undefine HAVE_RANDOM and HAVE_RINT.
 
 	* conf_post.h (AMPERSAND_FULL_NAME, subprocesses):
