--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
+	* configure.ac (opsysfile): Use AH_TEMPLATE.  Doc fix.
+
 	* configure.ac (NULL_DEVICE, SEPCHAR, USER_FULL_NAME):
 	Move here from src.
 
