* configure.ac (S_FILE): Remove output variable.
* src/Makefile.in (S_FILE): No longer set by configure.

* msdos/sed1v2.inp (S_FILE): Update for format change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-31  Glenn Morris  <rgm@gnu.org>
 
+	* configure.ac (S_FILE): Remove output variable.
+
 	* configure.ac (opsysfile): Use AH_TEMPLATE.  Doc fix.
 
 	* configure.ac (NULL_DEVICE, SEPCHAR, USER_FULL_NAME):
