--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-01  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (DEVICE_SEP, IS_DEVICE_SEP, IS_DIRECTORY_SEP)
+	(IS_ANY_SEP): Move here from src/lisp.h.
+
 2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* lib/makefile.w32-in (CONFIG_H): Update dependencies.
