--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-01  Glenn Morris  <rgm@gnu.org>
+
+	* lisp.h (IS_DIRECTORY_SEP, IS_DEVICE_SEP, IS_ANY_SEP):
+	Move to configure.ac.
+
 2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (CONFIG_H): Update dependencies.
