--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* coding.h (CODING_ATTR_FLUSHING): Remove; unused and wouldn't work.
+
 2012-08-01  Glenn Morris  <rgm@gnu.org>
 
 	* lisp.h (IS_DIRECTORY_SEP, IS_DEVICE_SEP, IS_ANY_SEP):
