--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,12 @@
 2012-08-01  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Use INTERNAL_FIELD for symbols.
+	* lisp.h (SVAR): New macro.  Adjust users.
+	* alloc.c, bytecode.c, cmds.c, data.c, doc.c, eval.c:
+	* fns.c, keyboard.c, lread.c, xterm.c: Users changed.
+
+2012-08-01  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Use INTERNAL_FIELD for processes.
 	* process.h (PVAR): New macro.  Adjust style.
 	(struct Lisp_Process): Change Lisp_Object members to INTERNAL_FIELD.
