Use INTERNAL_FIELD for conses and overlays. * src/lisp.h (struct Lisp_Cons): Use INTERNAL_FIELD. Remove obsolete comment. (MVAR): New macro. (struct Lisp_Overlay): Use INTERNAL_FIELD. * src/alloc.c, src/buffer.c, src/buffer.h, src/fns.c: Adjust users. * admin/coccinelle/overlay.cocci: Semantic patch to replace direct access to Lisp_Object members of struct Lisp_Overlay to MVAR.

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,5 +1,10 @@
 2012-08-01  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	* coccinelle/overlay.cocci: Semantic patch to replace direct
+	access to Lisp_Object members of struct Lisp_Overlay to MVAR.
+
+2012-08-01  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	* coccinelle/symbol.cocci: Semantic patch to replace direct
 	access to Lisp_Object members of struct Lisp_Symbol to SVAR.
 
