Sync Windows port with autogen/config.in changes.
* nt/config.nt: Sync with autogen/config.in.
(DEVICE_SEP, FLOAT_CHECK_DOMAIN, HAVE_INVERSE_HYPERBOLIC)
(INTERNAL_TERMINAL, IS_ANY_SEP, IS_DEVICE_SEP, IS_DIRECTORY_SEP):
New macros.

* src/s/ms-w32.h (DEVICE_SEP, IS_DIRECTORY_SEP, IS_ANY_SEP):
Remove; moved to nt/config.nt.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
+
+	* s/ms-w32.h (DEVICE_SEP, IS_DIRECTORY_SEP, IS_ANY_SEP):
+	Remove; moved to nt/config.nt.
+
 2012-08-01  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Use INTERNAL_FIELD for conses and overlays.
