--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,6 +1,13 @@
 2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* config.nt: Sync with autogen/config.in.
+	(DEVICE_SEP, FLOAT_CHECK_DOMAIN, HAVE_INVERSE_HYPERBOLIC)
+	(INTERNAL_TERMINAL, IS_ANY_SEP, IS_DEVICE_SEP, IS_DIRECTORY_SEP):
+	New macros.
+
+2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
+
+	* config.nt: Sync with autogen/config.in.
 	Remove code moved to conf_post.h and include <conf_post.h>
 	(NULL_DEVICE, SEPCHAR, SIGNAL_H_AHB, TIOCSIGSEND, USER_FULL_NAME)
 	(USG5_4, WRETCODE, _longjmp, _setjmp, wait3): New macros.
