--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-01  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (DOS_NT, MSDOS): New system type templates.
+
 2012-08-01  Ulrich Müller  <ulm@gentoo.org>
 
 	* configure.ac (LIB_STANDARD, START_FILES) [FreeBSD]:
