--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-01  Glenn Morris  <rgm@gnu.org>
+
+	* s/msdos.h: Remove file.
+	* conf_post.h [MSDOS]: New section, moved from s/msdos.h.
+	* Makefile.in (S_FILE): Remove.
+	(config_h): Remove S_FILE.
+
 2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* s/ms-w32.h (DEVICE_SEP, IS_DIRECTORY_SEP, IS_ANY_SEP):
