* msdos/sed2v2.inp (HAVE_WCHAR_H): Fix typo.

--- a/msdos/ChangeLog
+++ b/msdos/ChangeLog
@@ -1,5 +1,7 @@
 2012-08-01  Glenn Morris  <rgm@gnu.org>
 
+	* sed2v2.inp (HAVE_WCHAR_H): Fix typo.
+
 	* sed2v2.inp (MSDOS, DOS_NT, FLOAT_CHECK_DOMAIN)
 	(HAVE_INVERSE_HYPERBOLIC, DEVICE_SEP, IS_DIRECTORY_SEP, IS_ANY_SEP)
 	(INTERNAL_TERMINAL, NULL_DEVICE, SEPCHAR, USER_FULL_NAME)
