--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-01  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (config_h): New variable.
+	Use throughout in place of ../src/config.h.
+
 2012-08-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (CONFIG_H): Update dependencies.
