--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,20 @@
+2012-08-01  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc.texi (Simplification modes): Mention "basic" simplification.
+	(The Calc Mode Line): Mention the mode line display for Basic
+	simplification mode.
+	(Simplify Formulas): Refer to 'algebraic' rather than 'default'
+	simplifications.
+	(Basic Simplifications): Rename from "Limited Simplifications"
+	Replace "limited" by "basic" throughout.
+	(Algebraic Simplifications):  Indicate that the algebraic
+	simplifications are done by default.
+	(Unsafe Simplifications):  Mention `m E'.
+	(Simplification of Units): Mention `m U'.
+	(Trigonometric/Hyperbolic Functions, Reducing and Mapping)
+	(Kinds of Declarations, Functions for Declarations):  Mention
+	"algebraic simplifications" instead of `a s'.
+
 2012-07-30  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc.texi (Getting Started, Tutorial): Change simulated
