--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-01  Alp Aker  <alp.tekin.aker@gmail.com>
+
+	* nsterm.m (ns_set_vertical_scroll_bar, ns_redeem_scroll_bar)
+	(EmacsWindow-accessibilityAttributeValue, EmacsScroller-initFrame:)
+	(EmacsScroller-dealloc):  Adjust to use WVAR.  (Bug#12114)
+	* nsfns.m (ns_set_name_as_filename): Likewise.
+	* nsmenu.m (ns_update_menubar): Likewise.
+	* nsselect.m (symbol_to_nsstring): Adjust to use SVAR.
+
 2012-08-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* .gdbinit (xcar, xcdr, xlist, xwindow, nextcons, xprintsym):
