--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,19 @@
+2012-08-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Use "ASET (a, i, v)" rather than "AREF (a, i) = v".
+	This how ASET and AREF are supposed to work, and makes
+	it easier to think about future improvements.  See
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-08/msg00026.html>.
+	* charset.h (set_charset_attr): New function.
+	All lvalue-style uses of CHARSET_DECODER etc. changed to use it.
+	* lisp.h (ASET): Rewrite so as not to use AREF in an lvalue style.
+	(aref_addr): New function.  All uses of &AREF(...) changed.
+	(set_hash_key, set_hash_value, set_hash_next, set_hash_hash)
+	(set_hash_index): New functions.  All lvalue-style uses of
+	HASH_KEY etc. changed.
+	* keyboard.c (set_prop): New function.  All lvalue-style uses
+	of PROP changed.
+
 2012-08-01  Alp Aker  <alp.tekin.aker@gmail.com>
 
 	* nsterm.m (ns_set_vertical_scroll_bar, ns_redeem_scroll_bar)
